CHATS_SIT/force-app/main/default/objects/Investigatory_Finding__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPV_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IPV Information</label>
        <referenceTo>IPV_Information__c</referenceTo>
        <relationshipLabel>Investigatory Findings</relationshipLabel>
        <relationshipName>Investigatory_Findings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investigatory_Finding__c</fullName>
        <label>Investigatory Finding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Failed to report HH comp</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Falsely reported HH comp</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Failed to report income</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Falsely reported income</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Failed to report residency</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Falsely reported residency</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Failed to report expenses</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Falsely reported expenses</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occurred__c</fullName>
        <label>Occurred</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>At Application</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>During Certification Period</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>At Redetermination</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Investigatory Finding</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Investigatory Finding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigatory Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>